Update hpara yaml file

--- a/ NOTEBOOKS/preview.ipynb
+++ b/ NOTEBOOKS/preview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "87c0ac70",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3394b779",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "928a9654",
    "metadata": {},
    "outputs": [
@@ -521,55 +521,315 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e7dd482b",
+   "execution_count": 7,
+   "id": "e73e5a61",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== labels_consensus.csv ===\n",
+      "Total length (number of rows): 203936\n",
+      "\n",
+      "=== Number of Samples per Split_Set ===\n",
+      "Split_Set\n",
+      "Train          112712\n",
+      "Test1           44395\n",
+      "Development     31961\n",
+      "Test2           14868\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "========================================\n",
+      "\n",
+      "=== Detailed Statistics within each Split_Set ===\n",
+      "             Unique_EmoClass_Count  Unique_SpkrID_Count  Unique_Gender_Count\n",
+      "Split_Set                                                                   \n",
+      "Development                     10                  714                    2\n",
+      "Test1                           10                  315                    2\n",
+      "Test2                           10                  113                    3\n",
+      "Train                           10                 2113                    3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assume the consensus_csv DataFrame is already loaded, for example:\n",
+    "# consensus_csv = pd.read_csv(os.path.join(LABELS_DIR, 'labels_consensus.csv'))\n",
+    "print(\"\\n=== labels_consensus.csv ===\")\n",
+    "# 1. Get the total length of the DataFrame\n",
+    "total_length = len(consensus_csv)\n",
+    "print(f\"Total length (number of rows): {total_length}\\n\")\n",
+    "\n",
+    "# 2. Count the number of samples for each Split_Set\n",
+    "print(\"=== Number of Samples per Split_Set ===\")\n",
+    "split_counts = consensus_csv['Split_Set'].value_counts()\n",
+    "print(split_counts)\n",
+    "print(\"\\n\" + \"=\"*40 + \"\\n\")\n",
+    "\n",
+    "\n",
+    "# 3. Within each Split_Set, count the number of unique values for EmoClass, SpkrID, and Gender\n",
+    "print(\"=== Detailed Statistics within each Split_Set ===\")\n",
+    "# Group by 'Split_Set'\n",
+    "# Then use agg (aggregate) to apply the nunique (number of unique) function to specified columns\n",
+    "detailed_stats = consensus_csv.groupby('Split_Set').agg({\n",
+    "    'EmoClass': 'nunique',\n",
+    "    'SpkrID': 'nunique',\n",
+    "    'Gender': 'nunique'\n",
+    "})\n",
+    "\n",
+    "# For clarity, rename the columns to be more descriptive\n",
+    "detailed_stats.rename(columns={\n",
+    "    'EmoClass': 'Unique_EmoClass_Count',\n",
+    "    'SpkrID': 'Unique_SpkrID_Count',\n",
+    "    'Gender': 'Unique_Gender_Count'\n",
+    "}, inplace=True)\n",
+    "\n",
+    "print(detailed_stats)"
+   ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4cc5031e",
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3a308738",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of lines: 207136\n",
+      "\n",
+      "=== Count for each Label ===\n",
+      "label\n",
+      "Train          112712\n",
+      "Test1           44395\n",
+      "Development     31961\n",
+      "Test2           14868\n",
+      "Test3            3200\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "msp_train_minimal.json created successfully! Format: minimal\n",
-    "msp_valid_minimal.json created successfully! Format: minimal\n",
-    "msp_test_minimal.json created successfully! Format: minimal\n",
+    "import pandas as pd\n",
     "\n",
-    "MSP-PODCAST data split completed:\n",
-    "Train set: 81021 samples\n",
-    "Valid set: 21944 samples\n",
-    "Test set: 41590 samples\n",
+    "# --- Modify here: specify your filename ---\n",
+    "file_path = os.path.join(DATA_DIR, 'partition.txt')\n",
     "\n",
-    "Emotion distribution:\n",
-    "train: {'neu': 36203, 'hap': 24861, 'sad': 9745, 'ang': 10212}\n",
-    "valid: {'neu': 7423, 'hap': 6344, 'sad': 2341, 'ang': 5836}\n",
-    "test: {'neu': 18455, 'hap': 13235, 'sad': 3345, 'ang': 6555}"
+    "try:\n",
+    "    # Read the file, specify semicolon ';' as the separator, and indicate no header\n",
+    "    df = pd.read_csv(file_path, sep=';', header=None, names=['label', 'filename'])\n",
+    "\n",
+    "    # 1. Get the total number of lines (which is the length of the DataFrame)\n",
+    "    total_lines = len(df)\n",
+    "    print(f\"Total number of lines: {total_lines}\\n\")\n",
+    "\n",
+    "    # 2. Count the occurrences of each value in the 'label' column\n",
+    "    print(\"=== Count for each Label ===\")\n",
+    "    label_counts = df['label'].value_counts()\n",
+    "    print(label_counts)\n",
+    "\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"Error: File '{file_path}' not found. Please ensure the filename is correct and it is in the right path.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred while processing the file: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "64319724",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading data from '../DATA/partition.txt'...\n",
+      "Successfully filtered the data.\n",
+      "A new file named 'partition_test3.csv' has been created with 3200 rows.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Define the input file from which to read\n",
+    "input_file_path = os.path.join(DATA_DIR, 'partition.txt')\n",
+    "\n",
+    "# Define the name for the new output CSV file\n",
+    "output_file_path = 'partition_test3.csv'\n",
+    "\n",
+    "print(f\"Reading data from '{input_file_path}'...\")\n",
+    "\n",
+    "try:\n",
+    "    # Step 1: Read the original partition file using pandas\n",
+    "    # The file is separated by semicolons and has no header row\n",
+    "    df = pd.read_csv(input_file_path, sep=';', header=None, names=['label', 'filename'])\n",
+    "\n",
+    "    # Step 2: Filter the DataFrame to keep only the rows where the 'label' is 'Test3'\n",
+    "    # We use boolean indexing for this operation.\n",
+    "    # .copy() is used to avoid a potential SettingWithCopyWarning later.\n",
+    "    test3_df = df[df['label'] == 'Test3'].copy()\n",
+    "\n",
+    "    # Step 3: Check if any data for 'Test3' was found before saving\n",
+    "    if not test3_df.empty:\n",
+    "        # Step 4: Save the filtered DataFrame to a new CSV file\n",
+    "        # index=False ensures that the DataFrame index (0, 1, 2, ...) is not written into the CSV file\n",
+    "        test3_df.to_csv(output_file_path, index=False)\n",
+    "        \n",
+    "        print(f\"Successfully filtered the data.\")\n",
+    "        print(f\"A new file named '{output_file_path}' has been created with {len(test3_df)} rows.\")\n",
+    "\n",
+    "    else:\n",
+    "        # This message will be shown if no lines with 'Test3' are found\n",
+    "        print(\"No entries with the label 'Test3' were found in the input file.\")\n",
+    "        print(\"No output file was created.\")\n",
+    "\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"Error: The input file '{input_file_path}' was not found. Please make sure it is in the same directory.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c98ea2c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Test3 Data ===\n",
+      "   label                     filename\n",
+      "0  Test3   MSP-PODCAST_test3_0001.wav\n",
+      "1  Test3   MSP-PODCAST_test3_0002.wav\n",
+      "2  Test3   MSP-PODCAST_test3_0003.wav\n",
+      "3  Test3   MSP-PODCAST_test3_0004.wav\n",
+      "4  Test3   MSP-PODCAST_test3_0005.wav\n"
+     ]
+    }
+   ],
+   "source": [
+    "test3_csv = pd.read_csv('partition_test3.csv')\n",
+    "print(\"\\n=== Test3 Data ===\")\n",
+    "print(test3_csv.head())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e73e5a61",
+   "id": "c768064c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Analyzing '../DATA/Labels/labels_consensus.json' ---\n",
+      "Result: The file contains 203936 main entries (audio files).\n",
+      "\n",
+      "--- Analyzing '../DATA/Labels/labels.txt' ---\n",
+      "Result: The file has 1534731 lines.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "# --- File Paths to Check ---\n",
+    "json_file_path = os.path.join(LABELS_DIR, 'labels_detailed.json')\n",
+    "txt_file_path = os.path.join(LABELS_DIR, 'labels.txt')\n",
+    "\n",
+    "\n",
+    "# --- 1. Calculate length for labels_detailed.json ---\n",
+    "print(f\"--- Analyzing '{json_file_path}' ---\")\n",
+    "try:\n",
+    "    with open(json_file_path, 'r', encoding='utf-8') as f:\n",
+    "        # Load the entire JSON object from the file\n",
+    "        json_data = json.load(f)\n",
+    "    \n",
+    "    # The 'length' is the number of top-level keys in the JSON object\n",
+    "    json_length = len(json_data)\n",
+    "    \n",
+    "    print(f\"Result: The file contains {json_length} main entries (audio files).\\n\")\n",
+    "\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"Error: File '{json_file_path}' not found.\\n\")\n",
+    "except json.JSONDecodeError:\n",
+    "    print(f\"Error: Could not decode JSON from '{json_file_path}'. The file might be malformed.\\n\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred: {e}\\n\")\n",
+    "\n",
+    "\n",
+    "# --- 2. Calculate length for labels.txt ---\n",
+    "print(f\"--- Analyzing '{txt_file_path}' ---\")\n",
+    "try:\n",
+    "    with open(txt_file_path, 'r', encoding='utf-8') as f:\n",
+    "        # A memory-efficient way to count lines\n",
+    "        txt_length = sum(1 for line in f)\n",
+    "        \n",
+    "    print(f\"Result: The file has {txt_length} lines.\")\n",
+    "\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"Error: File '{txt_file_path}' not found.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred: {e}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3a308738",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a7366ff3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analyzing '../DATA/Labels/labels.txt' to count lines starting with 'MSP-PODCAST'...\n",
+      "\n",
+      "--- Analysis Complete ---\n",
+      "Found 203936 lines that start with 'MSP-PODCAST'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The file to be analyzed\n",
+    "file_path = os.path.join(LABELS_DIR, 'labels.txt')\n",
+    "\n",
+    "# The specific prefix we want to count\n",
+    "# We are looking for lines that start with this text.\n",
+    "target_prefix = 'MSP-PODCAST'\n",
+    "\n",
+    "# Initialize a counter to store the result\n",
+    "count = 0\n",
+    "\n",
+    "print(f\"Analyzing '{file_path}' to count lines starting with '{target_prefix}'...\")\n",
+    "\n",
+    "try:\n",
+    "    # Use 'with open' to safely open and automatically close the file\n",
+    "    with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "        # Loop through each line in the file\n",
+    "        for line in f:\n",
+    "            # Check if the line (after removing any leading/trailing whitespace)\n",
+    "            # starts with our target prefix\n",
+    "            if line.strip().startswith(target_prefix):\n",
+    "                # If it does, increment our counter\n",
+    "                count += 1\n",
+    "    \n",
+    "    # After checking all lines, print the final count\n",
+    "    print(\"\\n--- Analysis Complete ---\")\n",
+    "    print(f\"Found {count} lines that start with '{target_prefix}'.\")\n",
+    "\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"Error: The file '{file_path}' was not found. Please check the path and filename.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred: {e}\")"
+   ]
   }
  ],
  "metadata": {
